--- a/redis-1/redis.conf
+++ b/redis-1/redis.conf
@@ -530,7 +530,7 @@ dir ./
 #    network partition replicas automatically try to reconnect to masters
 #    and resynchronize with them.
 #
-replicaof 127.0.0.1 6379
+replicaof redis-0 6379
 
 # If the master is password protected (using the "requirepass" configuration
 # directive below) it is possible to tell the replica to authenticate before
