Configured ip announcement

--- a/redis-2/redis.conf
+++ b/redis-2/redis.conf
@@ -771,7 +771,7 @@ replica-priority 100
 # replica-announced set to 'no', the replica can be promoted to master. To
 # prevent this behavior, set replica-priority to 0.
 #
-# replica-announced yes
+replica-announced yes
 
 # It is possible for a master to stop accepting writes if there are less than
 # N replicas connected, having a lag less or equal than M seconds.
@@ -821,7 +821,7 @@ replica-priority 100
 # There is no need to use both the options if you need to override just
 # the port or the IP address.
 #
-# replica-announce-ip 5.5.5.5
+replica-announce-ip redis-2
 # replica-announce-port 1234
 
 ############################### KEYS TRACKING #################################
