--- a/sentinel-1/sentinel.conf
+++ b/sentinel-1/sentinel.conf
@@ -5,3 +5,5 @@ sentinel failover-timeout mymaster 60000
 sentinel parallel-syncs mymaster 1
 sentinel auth-pass mymaster a-very-complex-password-here
 sentinel resolve-hostnames yes
+sentinel announce-hostnames yes
+sentinel announce-ip sentinel-1
